# engram

./: .gitignore  AUDIT.md  INTEGRATIONS.md  INTEROP.md  NOTICE  README.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md  run.py  seed_memories.jsonl
engram/: __init__.py  __main__.py  cli.py  connect.py  mcp_server.py  memory.py  py.typed
examples/: help.txt  stats.txt  version.txt
tests/: test_cli.py  test_connect.py  test_deep.py  test_hardening.py  test_mcp_server.py  test_memory.py  test_smoke.py
