[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.1.1"
description = "Durable, model-agnostic long-term memory for AI agents — stdlib, SQLite, MCP-native."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LicenseRef-COCL-1.0" }
authors = [
    { name = "Cognis Digital", email = "suite@cognis.digital" },
]
keywords = [
    "ai-agents",
    "memory",
    "mcp",
    "mcp-server",
    "llm",
    "python",
    "self-hosted",
    "cognis-neural-suite",
    "tf-idf",
    "sqlite",
    "retrieval",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Intentionally no runtime dependencies: standard library only.
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/engram"

[project.scripts]
"engram-emit" = "engram.connect:emit_main"
engram = "engram.cli:main"
engram-mcp = "engram.mcp_server:main"

[tool.setuptools]
packages = ["engram"]

[tool.setuptools.package-data]
engram = ["py.typed"]
